@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install,v 1.85 2004/12/21 19:34:13 tom_kelly33 Exp $
+# $Id: livecd-install,v 1.86 2004/12/31 21:37:49 tom_kelly33 Exp $
 #
 
 package fMain;
@@ -240,7 +240,7 @@ sub getStr {
 }
 # Form implementation generated from reading ui file 'livecd-install.ui'
 #
-# Created: Tue Dec 21 13:33:24 2004
+# Created: Fri Dec 31 15:31:36 2004
 #      by: The PerlQt User Interface Compiler (puic)
 #
 # WARNING! All changes made in this file will be lost!
@@ -3442,7 +3442,7 @@ sub NEW
 
     cbSwapFormat = Qt::CheckBox(groupBox16, "cbSwapFormat");
     cbSwapFormat->setGeometry( Qt::Rect(260, 70, 110, 20) );
-    cbSwapFormat->setChecked( 0 );
+    cbSwapFormat->setChecked( 1 );
 
     tlWelcome_2_3 = Qt::Label(page_2, "tlWelcome_2_3");
     tlWelcome_2_3->setGeometry( Qt::Rect(310, 0, 395, 80) );
@@ -3835,7 +3835,7 @@ sub languageChange
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install,v 1.85 2004/12/21 19:34:13 tom_kelly33 Exp $
+# $Id: livecd-install,v 1.86 2004/12/31 21:37:49 tom_kelly33 Exp $
 #
 
 #use LCDLang;
@@ -3848,8 +3848,8 @@ use lib qw(/usr/lib/libDrakX);
 
 use fs;
 
-my $debug   : shared = undef;
-my $nocopy  : shared = undef;
+#my $debug   : shared = undef;
+#my $nocopy  : shared = undef;
 
 if ($opt_debug) {$debug = 1};
 if ($opt_nocopy) {$nocopy = 1};
@@ -5065,7 +5065,7 @@ sub cbLanguage_act # SLOT: ( const QString & )
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install,v 1.85 2004/12/21 19:34:13 tom_kelly33 Exp $
+# $Id: livecd-install,v 1.86 2004/12/31 21:37:49 tom_kelly33 Exp $
 #
 
 package main;
