@@ -238,7 +238,7 @@
                     <string>Format</string>
                 </property>
                 <property name="checked">
-                    <bool>false</bool>
+                    <bool>true</bool>
                 </property>
             </widget>
         </widget>
